// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`select-field can mount "read only" Select field as checkboxes list 1`] = `
<div id="app">
    <div class="SharpSelect SharpSelect--multiple">
        <div>
            <div class="SharpCheck"><label class="SharpCheck__label"><input type="checkbox" disabled="disabled" class="SharpCheck__input"> <span class="SharpCheck__appearance"><svg width="12" height="9" viewBox="0 0 12 9" fill-rule="evenodd" class="SharpCheck__checkmark"><path d="M4.1 6.1L1.4 3.4 0 4.9 4.1 9l7.6-7.6L10.3 0z"></path></svg></span> <span class="SharpChek__label-text">AAA</span></label></div>
            <div
                class="SharpCheck"><label class="SharpCheck__label"><input type="checkbox" disabled="disabled" class="SharpCheck__input"> <span class="SharpCheck__appearance"><svg width="12" height="9" viewBox="0 0 12 9" fill-rule="evenodd" class="SharpCheck__checkmark"><path d="M4.1 6.1L1.4 3.4 0 4.9 4.1 9l7.6-7.6L10.3 0z"></path></svg></span> <span class="SharpChek__label-text">BBB</span></label></div>
    </div>
</div>
</div>
`;

exports[`select-field can mount "read only" Select field as radios list 1`] = `
<div id="app">
    <div class="SharpSelect">
        <div>
            <div class="SharpSelect__radio-button-group"><span><input type="radio" id="select0" tabindex="0" disabled="disabled" name="select" class="SharpRadio"> <label for="select0" class="SharpRadio__label"><span class="SharpRadio__appearance"></span> AAA
                </label>
                </span><span><input type="radio" id="select1" tabindex="0" disabled="disabled" name="select" class="SharpRadio"> <label for="select1" class="SharpRadio__label"><span class="SharpRadio__appearance"></span> BBB
                </label>
                </span>
            </div>
        </div>
    </div>
</div>
`;

exports[`select-field can mount Select field 1`] = `
<div id="app">
    <div class="SharpSelect">
        <div tabindex="0" class="multiselect"><svg width="10" height="5" viewBox="0 0 10 5" fill-rule="evenodd" class="multiselect__select"><path d="M10 0L5 5 0 0z"></path></svg>
            <div class="multiselect__tags">
                <div class="multiselect__tags-wrap" style="display: none;"></div>
                <!---->
                <div class="multiselect__spinner" style="display: none;"></div>
                <!----><span class="multiselect__single">placeholder</span></div>
            <div class="multiselect__content-wrapper" style="max-height: 300px; display: none;">
                <ul class="multiselect__content" style="display: inline-block;">
                    <!---->
                    <li class="multiselect__element"><span data-select="Press enter to select" data-selected="Selected" data-deselect="Press enter to remove" class="multiselect__option multiselect__option--highlight"><span>AAA</span></span>
                        <!---->
                    </li>
                    <li class="multiselect__element"><span data-select="Press enter to select" data-selected="Selected" data-deselect="Press enter to remove" class="multiselect__option"><span>BBB</span></span>
                        <!---->
                    </li>
                    <li style="display: none;"><span class="multiselect__option">No elements found. Consider changing the search query.</span></li>
                </ul>
            </div>
        </div>
    </div>
</div>
`;

exports[`select-field can mount Select field as checkboxes list 1`] = `
<div id="app">
    <div class="SharpSelect SharpSelect--multiple">
        <div>
            <div class="SharpCheck"><label class="SharpCheck__label"><input type="checkbox" class="SharpCheck__input"> <span class="SharpCheck__appearance"><svg width="12" height="9" viewBox="0 0 12 9" fill-rule="evenodd" class="SharpCheck__checkmark"><path d="M4.1 6.1L1.4 3.4 0 4.9 4.1 9l7.6-7.6L10.3 0z"></path></svg></span> <span class="SharpChek__label-text">AAA</span></label></div>
            <div
                class="SharpCheck"><label class="SharpCheck__label"><input type="checkbox" class="SharpCheck__input"> <span class="SharpCheck__appearance"><svg width="12" height="9" viewBox="0 0 12 9" fill-rule="evenodd" class="SharpCheck__checkmark"><path d="M4.1 6.1L1.4 3.4 0 4.9 4.1 9l7.6-7.6L10.3 0z"></path></svg></span> <span class="SharpChek__label-text">BBB</span></label></div>
    </div>
</div>
</div>
`;

exports[`select-field can mount Select field as radios list 1`] = `
<div id="app">
    <div class="SharpSelect">
        <div>
            <div class="SharpSelect__radio-button-group"><span><input type="radio" id="select0" tabindex="0" name="select" class="SharpRadio"> <label for="select0" class="SharpRadio__label"><span class="SharpRadio__appearance"></span> AAA
                </label>
                </span><span><input type="radio" id="select1" tabindex="0" name="select" class="SharpRadio"> <label for="select1" class="SharpRadio__label"><span class="SharpRadio__appearance"></span> BBB
                </label>
                </span>
            </div>
        </div>
    </div>
</div>
`;
